@@ -130,10 +130,13 @@ entered before the user and password:<br>
 </div>
 
 
-<hr> <small><b><a name="N1"></a>Note:</b>&nbsp;By default, the
+<hr> <small><b></a>Notes:</b>&nbsp;<a name="N1">By default, the
 Autotype field is not displayed in the Add or Edit dialog boxes.
 To access the Autotype field, you may have to click on the
-"More&gt;&gt;" button in the dialog box.</small>
+"More&gt;&gt;" button in the dialog box.<br><br>If you are having
+  problems with autotype, you might want to disable 3rd-party
+  popup-blockers. Users have reported problems with the interaction
+  of popup-blockers with the autotype functionality.</small>
 <hr><!-- Added some white space at the bottom for natural scrolling -->
 <b><br>
 
